[package]
name = "tokenized-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenized_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
    ]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-token-metadata = "4.1.2"
solana-program = "2.0.3"
strategy = { path = "../strategy", features=["no-entrypoint", "cpi"] }
accountant = { path = "../accountant", features=["no-entrypoint", "cpi"] }
access_control = { path = "../access_control", features=["no-entrypoint", "cpi"] }
